Update 'z7fwj6cjy-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:8da2ad3979ba876fc1fd2226e0c808125627f254@sha256:91d4d0382aae5ab10bc1acb7cfe28689a07a892a2a995235dec50c93d61cd29e

--- a/components/z7fwj6cjy-go/overlays/development/deployment-patch.yaml
+++ b/components/z7fwj6cjy-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: z7fwj6cjy-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:8da2ad3979ba876fc1fd2226e0c808125627f254@sha256:91d4d0382aae5ab10bc1acb7cfe28689a07a892a2a995235dec50c93d61cd29e
+          name: container-image
